# lib/api-spec/openapi.yaml
@@ -367,6 +367,9 @@ components:
           enum: [draft, published, archived]
         templateId:
           type: ["integer", "null"]
+        templateConfig:
+          type: object
+          nullable: true
         thumbnailUrl:
           type: ["string", "null"]
         domain:
@@ -414,6 +417,8 @@ components:
           type: string
         templateId:
           type: integer
+        templateConfig:
+          type: object
 
     Template:
       type: object
